--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"async": "~0.9.0",
 		"nodemailer": "~1.3.0",
 		"request": "~2.54.0",
-		"query-string": "~1.0.0"
+		"query-string": "~1.0.0",
+		"agenda": "~0.6.28"
 	},
 	"devDependencies": {
 		"supertest": "~0.14.0",
