--- a/package.json
+++ b/package.json
@@ -1,82 +1,82 @@
 {
-	"name": "electrode",
-	"description": "Optimized charging for the Tesla Model S",
-	"version": "0.4.0",
-	"private": false,
-	"author": "Sean Emmer",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/seanemmer/electrode.git"
-	},
-	"engines": {
-		"node": "0.10.x",
-		"npm": "~2.7.5"
-	},
-	"scripts": {
-		"start": "node server.js",
-		"postinstall": "bower install --config.interactive=false"
-	},
-	"dependencies": {
-		"express": "~4.10.0",
-		"express-session": "~1.9.1",
-		"serve-favicon": "~2.1.6",
-		"body-parser": "~1.9.0",
-		"cookie-parser": "~1.3.2",
-		"compression": "~1.2.0",
-		"method-override": "~2.3.0",
-		"morgan": "~1.4.1",
-		"multer": "0.1.6",
-		"connect-mongo": "~0.4.1",
-		"connect-flash": "~0.1.1",
-		"helmet": "~0.4.0",
-		"consolidate": "~0.10.0",
-		"swig": "~1.4.1",
-		"mongoose": "~3.8.8",
-		"passport": "~0.2.0",
-		"passport-local": "~1.0.0",
-		"passport-facebook": "~1.0.2",
-		"passport-twitter": "~1.0.2",
-		"passport-linkedin": "~0.1.3",
-		"passport-google-oauth": "~0.1.5",
-		"passport-github": "~0.1.5",
-		"acl": "~0.4.4",
-		"socket.io": "~1.1.0",
-		"lodash": "~2.4.1",
-		"forever": "~0.11.0",
-		"bower": "~1.4.1",
-		"chalk": "~0.5.1",
-		"glob": "~5.0.0",
-		"async": "~0.9.0",
-		"nodemailer": "~1.3.0",
-		"request": "~2.54.0",
-		"query-string": "~1.0.0",
-		"agenda": "~0.6.28"
-	},
-	"devDependencies": {
-		"supertest": "~0.14.0",
-		"should": "~4.1.0",
-		"gulp": "~3.8.9",
-		"run-sequence": "~1.0.1",
-		"gulp-rename": "~1.2.0",
-		"gulp-concat": "~2.4.1",
-		"gulp-nodemon": "~1.0.4",
-		"gulp-livereload": "~2.1.1",
-		"gulp-jshint": "~1.8.6",
-		"gulp-csslint": "~0.1.5",
-		"gulp-ng-annotate": "~0.5.2",
-		"gulp-uglify": "~1.0.1",
-		"gulp-cssmin": "~0.1.6",
-		"gulp-mocha": "~1.1.1",
-		"gulp-karma": "~0.0.4",
-		"gulp-protractor": "~0.0.11",
-		"gulp-sass": "~1.3.3",
-		"gulp-less": "~1.3.6",
-		"gulp-load-plugins": "~0.7.0",
-		"karma": "~0.12.0",
-		"karma-jasmine": "~0.2.1",
-		"karma-coverage": "~0.2.0",
-		"karma-chrome-launcher": "~0.1.2",
-		"karma-firefox-launcher": "~0.1.3",
-		"karma-phantomjs-launcher": "~0.1.2"
-	}
+  "name": "electrode",
+  "description": "Optimized charging for the Tesla Model S",
+  "version": "0.4.0",
+  "private": false,
+  "author": "Sean Emmer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seanemmer/electrode.git"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "~2.7.5"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "bower install --config.interactive=false"
+  },
+  "dependencies": {
+    "acl": "~0.4.4",
+    "agenda": "~0.6.28",
+    "async": "~0.9.0",
+    "body-parser": "~1.9.0",
+    "bower": "~1.4.1",
+    "chalk": "~0.5.1",
+    "compression": "~1.2.0",
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "~0.4.1",
+    "consolidate": "~0.10.0",
+    "cookie-parser": "~1.3.2",
+    "express": "~4.10.0",
+    "express-session": "~1.9.1",
+    "forever": "~0.11.0",
+    "glob": "~5.0.0",
+    "helmet": "~0.4.0",
+    "lodash": "~2.4.1",
+    "method-override": "~2.3.0",
+    "mongoose": "~3.8.8",
+    "morgan": "~1.4.1",
+    "multer": "0.1.6",
+    "nodemailer": "~1.3.0",
+    "passport": "~0.2.0",
+    "passport-facebook": "~1.0.2",
+    "passport-github": "~0.1.5",
+    "passport-google-oauth": "~0.1.5",
+    "passport-linkedin": "~0.1.3",
+    "passport-local": "~1.0.0",
+    "passport-twitter": "~1.0.2",
+    "q": "^1.2.0",
+    "request": "~2.54.0",
+    "serve-favicon": "~2.1.6",
+    "socket.io": "~1.1.0",
+    "swig": "~1.4.1"
+  },
+  "devDependencies": {
+    "supertest": "~0.14.0",
+    "should": "~4.1.0",
+    "gulp": "~3.8.9",
+    "run-sequence": "~1.0.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-concat": "~2.4.1",
+    "gulp-nodemon": "~1.0.4",
+    "gulp-livereload": "~2.1.1",
+    "gulp-jshint": "~1.8.6",
+    "gulp-csslint": "~0.1.5",
+    "gulp-ng-annotate": "~0.5.2",
+    "gulp-uglify": "~1.0.1",
+    "gulp-cssmin": "~0.1.6",
+    "gulp-mocha": "~1.1.1",
+    "gulp-karma": "~0.0.4",
+    "gulp-protractor": "~0.0.11",
+    "gulp-sass": "~1.3.3",
+    "gulp-less": "~1.3.6",
+    "gulp-load-plugins": "~0.7.0",
+    "karma": "~0.12.0",
+    "karma-jasmine": "~0.2.1",
+    "karma-coverage": "~0.2.0",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-phantomjs-launcher": "~0.1.2"
+  }
 }
