--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
     "moment": "^2.10.2",
+    "moment-timezone": "^0.3.1",
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "multer": "0.1.6",
