--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "helmet": "~0.4.0",
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
-    "moment": "^2.10.2",
-    "moment-timezone": "^0.3.1",
+    "moment": "~2.10.2",
+    "moment-timezone": "~0.3.1",
     "mongoose": "~3.8.8",
+    "mongodb": "~1.4",
     "morgan": "~1.4.1",
     "multer": "0.1.6",
     "nodemailer": "~1.3.0",
@@ -48,7 +49,7 @@
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
-    "q": "^1.2.0",
+    "q": "~1.2.0",
     "request": "~2.54.0",
     "serve-favicon": "~2.1.6",
     "socket.io": "~1.1.0",
